--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       body {
         margin: 0;
         padding: 0;
+        overflow: hidden;
+        outline: 0;
       }
     </style>
   </head>
