--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Page Title</title>
+    <title>Graphile Delaunay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="delaunay.js"></script>
     <script src="main.js"></script>
@@ -18,6 +18,6 @@
     </style>
   </head>
   <body onload="init()">
-    <canvas id="canvas" width="1024" height="1024"> </canvas>
+    <canvas id="canvas" width="1024" height="1024"></canvas>
   </body>
 </html>
