--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
   </head>
   <body onload="init()">
-    <canvas id="canvas" width="1024" height="1024"></canvas>
+    <canvas id="canvas" style="width: 100%; height: 100%"></canvas>
   </body>
 </html>
