--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
       id="canvas"
       style="width: 100%; height: 100%; display: none"
     ></canvas>
-    <svg id="svg" width="1000" height="1000" viewBox="0 0 1000 1000">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      id="svg"
+      width="1000"
+      height="1000"
+      viewBox="0 0 1000 1000"
+    >
       <desc>PostGraphile Delaunay</desc>
       <g class="bg">
         <polygon points="0,0 1000,0 1000,1000 0,1000" fill="#ffffff" />
