--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
     </style>
   </head>
   <body onload="init()">
-    <canvas
-      id="canvas"
-      style="width: 100%; height: 100%; display: none"
-    ></canvas>
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      id="svg"
-      width="1000"
-      height="1000"
-      viewBox="0 0 1000 1000"
-    >
-      <desc>PostGraphile Delaunay</desc>
-      <g class="bg">
-        <polygon points="0,0 1000,0 1000,1000 0,1000" fill="#ffffff" />
-      </g>
-      <g class="triangles"></g>
-      <g class="circles"></g>
-    </svg>
+    <div style="float: left">
+      <canvas
+        id="canvas"
+        style="width: 100%; height: 100%; display: none"
+      ></canvas>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        id="svg"
+        width="1000"
+        height="1000"
+        viewBox="0 0 1000 1000"
+      >
+        <desc>PostGraphile Delaunay</desc>
+        <g class="bg">
+          <polygon points="0,0 1000,0 1000,1000 0,1000" fill="#ffffff" />
+        </g>
+        <g class="triangles"></g>
+        <g class="circles"></g>
+      </svg>
+    </div>
+    <div>Click image on left to regenerate</div>
+    <div><a id="a">Click to download SVG</a></div>
   </body>
 </html>
