--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
         viewBox="0 0 1000 1000"
       >
         <desc>PostGraphile Delaunay</desc>
-        <g class="bg">
-          <polygon points="0,0 1000,0 1000,1000 0,1000" fill="#ffffff" />
+        <polygon points="0,0 1000,0 1000,1000 0,1000" fill="#ffffff" />
+        <g opacity="0.5">
+          <g class="bg">
+            <polygon points="0,0 1000,0 1000,1000 0,1000" fill="#ffffff" />
+          </g>
+          <g class="triangles"></g>
+          <g class="circles"></g>
         </g>
-        <g class="triangles"></g>
-        <g class="circles"></g>
       </svg>
     </div>
     <div>Click image on left to regenerate</div>
